--- a/ezotera-frontend/components/header.html
+++ b/ezotera-frontend/components/header.html
@@ -43,7 +43,7 @@
 
             <!-- Хиромантия -->
             <div class="header__nav-item">
-                <a href="#" class="header__nav-link">Хиромантия</a>
+                <a href="PALMISTRY_HREF" class="header__nav-link">Хиромантия</a>
             </div>
 
             <!-- Натальная карта -->
